Fixed flake8 check errors.

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ setenv =
 
 [flake8]
 # http://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
-ignore = E231,E501,W504
+ignore = E231,E501,W503,W504,E226
 max-line-length = 99
 # output-file = .flake8.text
 # show-source = true
